Estructura inicial terminada

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,6 @@
           <button class="welcome-screen__enter-button enter-button-2"><i class="fa-solid fa-arrow-right-to-bracket"></i></button>
         </form>
       </div>
-
     </section>
 
     <header class="main-chat">
@@ -47,12 +46,6 @@
       </div>
     </header>
 
-    <main class="main-chat">
-      <div class="main-user-message__container">
-        <p class="main-user-message__text">Mensaje de Ejemplo</p>
-      </div>
-    </main>
-
     <section class="decrypt-chat__screen">
       <div class="decrypt-chat__container">
         <div class="decrypt-chat__title">
@@ -62,11 +55,17 @@
 
         <form class="decrypt-chat__key" action="#">
           <i class="fa-solid fa-key"></i>
-          <input type="number" name="key" placeholder="123">
+          <input type="number" name="key" placeholder="123" required>
           <button type="submit"><i class="fa-solid fa-arrow-right-to-bracket"></i></button>
         </form>
       </div>
     </section>
+
+    <main class="main-chat">
+      <div class="main-user-message__container">
+        <p class="main-user-message__text"></p>
+      </div>
+    </main>
 
     <footer class="main-chat">
       <form action="#">
