--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Caesar's Chat</title>
+    <title>Caesar's Chat | Laboratoria</title>
     <link rel="stylesheet" href="style.css" />
 
     <!-- Icons & Fonts -->
+    <link rel="icon" href="./favicon.svg" style="background-color:#5EDCFF;">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Koulen&family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
   </head>
   <body>
+    <!-- Welcome Screen -->
     <section class="welcome-screen">
       <div class="welcome-screen__logo">
         <h3>Welcome to</h3>
@@ -25,12 +27,13 @@
         <p>Enter a key to encrypt your chat</p>
         <form action="#">
           <i class="fa-solid fa-key"></i>
-          <input type="number" name="key" placeholder="123" required>
+          <input type="number" name="key" placeholder="123" id="keyValue" required>
           <button class="welcome-screen__enter-button enter-button-2"><i class="fa-solid fa-arrow-right-to-bracket"></i></button>
         </form>
       </div>
     </section>
 
+    <!-- Main Chat Section -->
     <header class="main-chat">
       <div class="header-logo">
         <i class="fa-brands fa-pagelines header-logo__icon"></i>
@@ -71,14 +74,14 @@
       <form action="#">
         <span class="input-user-message">
           <i class="fa-solid fa-align-left"></i>
-          <input type="text" placeholder="Message" name="input-user-message">
+          <input type="text" placeholder="Message" id="getUserMessage" name="input-user-message">
         </span>
         <button class="enter-user-message" type="submit"><i class="fa-solid fa-arrow-right-to-bracket"></i></button>
       </form>
     </footer>
 
     <!-- JS Script -->
-    <script src="index.js">  </script>
+    <script src="index.js"></script>
   </body>
 </html>
 
