Solucionando Github Pages

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" />
 
     <!-- Icons & Fonts -->
-    <link rel="icon" href="./favicon.svg" style="background-color:#5EDCFF;">
+    <link rel="icon" href="./favicon.svg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -44,9 +44,9 @@
         <button><i class="fa-solid fa-lock"></i></button>
       </div>
 
-      <div class="header__menu-button">
+      <!-- <div class="header__menu-button">
         <button><i class="fa-solid fa-ellipsis je header__menu-icon"></i></button>
-      </div>
+      </div> -->
     </header>
 
     <section class="decrypt-chat__screen">
@@ -81,8 +81,7 @@
     </footer>
 
     <!-- JS Script -->
-    <script src="index.js"></script>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
 
-<!-- type="module" -->
