--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" />
 
     <!-- Icons & Fonts -->
-    <link rel="icon" href="./favicon.svg">
+    <link rel="icon" href="./faviconCaesar.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -58,8 +58,8 @@
 
         <form class="decrypt-chat__key" action="#">
           <i class="fa-solid fa-key"></i>
-          <input type="number" name="key" placeholder="123" required>
-          <button type="submit"><i class="fa-solid fa-arrow-right-to-bracket"></i></button>
+          <input class="decrypt-chat__decrypt-key-input" type="number" name="key" placeholder="123" required>
+          <button class="decrypt-chat__enter-key-button" type="submit"><i class="fa-solid fa-arrow-right-to-bracket"></i></button>
         </form>
       </div>
     </section>
