--- a/src/index.html
+++ b/src/index.html
@@ -58,8 +58,8 @@
 
         <form class="decrypt-chat__key" action="#">
           <i class="fa-solid fa-key"></i>
-          <input class="decrypt-chat__decrypt-key-input" type="number" name="key" placeholder="123" required>
-          <button class="decrypt-chat__enter-key-button" type="submit"><i class="fa-solid fa-arrow-right-to-bracket"></i></button>
+          <input type="number" name="key" placeholder="123" id="keyValueDecrypt" required>
+          <button class="decrypt-chat__enter-key-button"><i class="fa-solid fa-arrow-right-to-bracket"></i></button>
         </form>
       </div>
     </section>
