Todos los test pasados

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
       </div>
 
       <div class="header__decrypt-button">
-        <button><i class="fa-solid fa-lock"></i></button>
+        <button><i class="fa-solid fa-lock encrypted"></i><i class="fa-solid fa-lock-open decrypted"></i></button>
       </div>
 
       <!-- <div class="header__menu-button">
