Creado botón de salida para la pantalla de decrypt chat

--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,8 @@
     </header>
 
     <section class="decrypt-chat__screen">
+      <button class="exit-button"><i class="fa-solid fa-xmark"></i></button>
+
       <div class="decrypt-chat__container">
         <div class="decrypt-chat__title">
           <i class="fa-brands fa-pagelines"></i>
@@ -74,7 +76,7 @@
       <form action="#">
         <span class="input-user-message">
           <i class="fa-solid fa-align-left"></i>
-          <input type="text" placeholder="Message" id="getUserMessage" name="input-user-message">
+          <input type="text" placeholder="Message" id="getUserMessage" name="input-user-message" required>
         </span>
         <button class="enter-user-message" type="submit"><i class="fa-solid fa-arrow-right-to-bracket"></i></button>
       </form>
